--- a/FalconOS/FalconOS/FalconOS.csproj
+++ b/FalconOS/FalconOS/FalconOS.csproj
@@ -18,6 +18,9 @@
         <Description>Use VMware Player or Workstation to deploy and debug.</Description>
         <PxeInterface>192.168.0.8</PxeInterface>
         <VMWareEdition>Player</VMWareEdition>
+        <BinFormat>Elf</BinFormat>
+        <DebugEnabled>False</DebugEnabled>
+        <OptimizationLevel>0</OptimizationLevel>
     </PropertyGroup>
 
     <ItemGroup>
