--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /FalconOS/FalconOS/bin
+/FalconOS/.vs/FalconOS/FileContentIndex/6f697a11-7236-46cc-b29b-45ad6e88f0a2.vsidx
+/FalconOS/.vs/FalconOS/FileContentIndex/907f1674-4a11-4f63-8f09-1f0f9f3c75cf.vsidx
+/FalconOS/.vs/FalconOS/DesignTimeBuild/.dtbcache.v2
+/FalconOS/.vs/FalconOS/FileContentIndex/b13f2f01-5600-472e-84bf-de42c9194e9a.vsidx
+/FalconOS/FalconOS/obj/Debug/net6.0/FalconOS.assets.cache
